# mpoprc-alternative

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt
src/: CMakeLists.txt  Settings.cpp  Settings.hpp  main.cpp
